# obs-realtime-subtitles-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: .Aptfile  .Brewfile  Build-Windows.ps1
cmake/: BuildMyCurl.cmake
cmake/common/: compiler_common.cmake  helpers_common.cmake
cmake/linux/: compilerconfig.cmake
data/locale/: en-GB.ini  ja-JP.ini  ko-KR.ini  zh-HK.ini
include/plugin/: CaptionFormatSettings.h  CaptionOutput.h  CaptionOutputControl.h  CaptionPluginSettings.h  CaptionSourceSettings.h  CaptioningState.h  DataStructs.h  OutputWriter.h  PluginManager.h  SceneCollectionSettings.h  SourceAudioCaptureSession.h  SourceCaptioner.h  SourceCaptionerSettings.h  SourceCaptionerStatus.h  TextOutputSettings.h  TranscriptOutputSettings.h  Types.h
include/window/: GUIDock.h  MainWindow.h
src/: CountdownTimer.ui  PluginSupport.c.in  RealTimeSubtitles.ui  countdown-widget.cpp  countdown-widget.hpp  main_window.cpp  main_window.h  obs_realtime_subtitles_plugin.cpp  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin_source.h
src/gui/: gui.cpp  gui.h  main_window.ui  qt_gui.cpp  qt_gui.h
src/plugin/: CaptionFormatSettings.h  CaptionOutput.h  CaptionOutputControl.h  CaptionPluginSettings.h  CaptionSourceSettings.h  GeneralSettings.h  OutputWriter.h  PluginSettings.h  PluginSupport.h  SourceCaptioner.h  SourceCaptionerSettings.h  SourceCaptionerStatus.h  Types.h
src/resources/: obs.qrc
src/resources/images/: logo
src/transcript_plugin/: DeepGramProcessing.cpp  DeepGramProcessing.h  TranscriptPlugin.c  TranscriptPlugin.cpp  TranscriptPlugin.h  TranscriptPluginCallbacks.cpp  TranscriptPluginCallbacks.h  TranscriptPluginData.h  TranscriptPluginUtils.cpp  TranscriptPluginUtils.h  WebsocketEndpoint.h
src/util/: UIConstants.h
src/window/: GUIDock.cpp  GUIDock.h  GUIDock.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
